--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<form action="/" method="post" class="mb-2">
 			<div class="form-group mb-2">
-				<input type="text" class="form-control" name="title" />
+				<input type="text" class="form-control" name="title" required />
 			</div>
 			<button class="btn btn-primary" type="submit">create</button>
 		</form>
